--2020-03-02 04:16:04--  http://www.mbudget.gov.gn/wp-content/uploads/2017/09/rapportjuin2017.pdf
Resolving www.mbudget.gov.gn (www.mbudget.gov.gn)... 144.76.240.174
Connecting to www.mbudget.gov.gn (www.mbudget.gov.gn)|144.76.240.174|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 1018587 (995K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  5% 8.56M 1s
    50K .......... .......... .......... .......... .......... 10% 19.5M 1s
   100K .......... .......... .......... .......... .......... 15%  101M 0s
   150K .......... .......... .......... .......... .......... 20%  264M 0s
   200K .......... .......... .......... .......... .......... 25% 19.1M 0s
   250K .......... .......... .......... .......... .......... 30%  103M 0s
   300K .......... .......... .......... .......... .......... 35% 23.9M 0s
   350K .......... .......... .......... .......... .......... 40%  203M 0s
   400K .......... .......... .......... .......... .......... 45%  143M 0s
   450K .......... .......... .......... .......... .......... 50%  143M 0s
   500K .......... .......... .......... .......... .......... 55% 26.7M 0s
   550K .......... .......... .......... .......... .......... 60% 72.6M 0s
   600K .......... .......... .......... .......... .......... 65%  176M 0s
   650K .......... .......... .......... .......... .......... 70%  326M 0s
   700K .......... .......... .......... .......... .......... 75% 32.8M 0s
   750K .......... .......... .......... .......... .......... 80%  225M 0s
   800K .......... .......... .......... .......... .......... 85%  174M 0s
   850K .......... .......... .......... .......... .......... 90%  402M 0s
   900K .......... .......... .......... .......... .......... 95%  192M 0s
   950K .......... .......... .......... .......... ....      100%  113M=0.2s

2020-03-02 04:16:04 (47.3 Mb/s) - ‘/dev/null’ saved [1018587/1018587]

