--2020-02-25 22:39:04--  http://www.mtn.com.gn/jobs/Senior_Manager_Network_Technology_revpaul.pdf%0D
Resolving www.mtn.com.gn (www.mtn.com.gn)... 31.207.37.70
Connecting to www.mtn.com.gn (www.mtn.com.gn)|31.207.37.70|:80... connected.
HTTP request sent, awaiting response... --2020-02-25 22:39:04--  http://www.mtn.com.gn/jobs/Senior_Manager_Network_Technology_revpaul.pdf%0D
Resolving www.mtn.com.gn (www.mtn.com.gn)... 31.207.37.70
Connecting to www.mtn.com.gn (www.mtn.com.gn)|31.207.37.70|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: http://mtn.com.gn/jobs/Senior_Manager_Network_Technology_revpaul.pdf [following]
--2020-02-25 22:39:04--  http://mtn.com.gn/jobs/Senior_Manager_Network_Technology_revpaul.pdf
Resolving mtn.com.gn (mtn.com.gn)... 31.207.37.70
Reusing existing connection to www.mtn.com.gn:80.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: http://mtn.com.gn/jobs/Senior_Manager_Network_Technology_revpaul.pdf [following]
--2020-02-25 22:39:04--  http://mtn.com.gn/jobs/Senior_Manager_Network_Technology_revpaul.pdf
Resolving mtn.com.gn (mtn.com.gn)... 31.207.37.70
Reusing existing connection to www.mtn.com.gn:80.
HTTP request sent, awaiting response... 404 Not Found
404 Not Found
2020-02-25 22:39:04 ERROR 404: Not Found.

2020-02-25 22:39:04 ERROR 404: Not Found.

