--2020-02-25 22:39:35--  https://www.mtp.gov.gn/files/e3a80c99-a90c-49bf-823f-a70252507aaa.pdf%0D
Resolving www.mtp.gov.gn (www.mtp.gov.gn)... --2020-02-25 22:39:35--  https://www.mtp.gov.gn/files/e3a80c99-a90c-49bf-823f-a70252507aaa.pdf%0D
Resolving www.mtp.gov.gn (www.mtp.gov.gn)... 159.65.38.74
Connecting to www.mtp.gov.gn (www.mtp.gov.gn)|159.65.38.74|:443... connected.
159.65.38.74
Connecting to www.mtp.gov.gn (www.mtp.gov.gn)|159.65.38.74|:443... connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:36 ERROR 404: Not Found.

HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:36 ERROR 404: Not Found.

