--2020-03-02 04:16:08--  http://www.mtp.gov.gn/files/e3a80c99-a90c-49bf-823f-a70252507aaa.pdf
Resolving www.mtp.gov.gn (www.mtp.gov.gn)... 159.65.38.74
Connecting to www.mtp.gov.gn (www.mtp.gov.gn)|159.65.38.74|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: https://www.mtp.gov.gn/files/e3a80c99-a90c-49bf-823f-a70252507aaa.pdf [following]
--2020-03-02 04:16:08--  https://www.mtp.gov.gn/files/e3a80c99-a90c-49bf-823f-a70252507aaa.pdf
Connecting to www.mtp.gov.gn (www.mtp.gov.gn)|159.65.38.74|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 1765739 (1.7M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  2% 5.55M 2s
    50K .......... .......... .......... .......... ..........  5% 5.64M 2s
   100K .......... .......... .......... .......... ..........  8%  111M 2s
   150K .......... .......... .......... .......... .......... 11%  257M 1s
   200K .......... .......... .......... .......... .......... 14% 5.68M 1s
   250K .......... .......... .......... .......... .......... 17%  219M 1s
   300K .......... .......... .......... .......... .......... 20% 6.15M 1s
   350K .......... .......... .......... .......... .......... 23%  148M 1s
   400K .......... .......... .......... .......... .......... 26%  259M 1s
   450K .......... .......... .......... .......... .......... 28%  101M 1s
   500K .......... .......... .......... .......... .......... 31% 6.45M 1s
   550K .......... .......... .......... .......... .......... 34%  112M 1s
   600K .......... .......... .......... .......... .......... 37%  133M 1s
   650K .......... .......... .......... .......... .......... 40%  333M 1s
   700K .......... .......... .......... .......... .......... 43%  155M 0s
   750K .......... .......... .......... .......... .......... 46% 6.54M 1s
   800K .......... .......... .......... .......... .......... 49%  123M 0s
   850K .......... .......... .......... .......... .......... 52%  415M 0s
   900K .......... .......... .......... .......... .......... 55%  459M 0s
   950K .......... .......... .......... .......... .......... 57%  339M 0s
  1000K .......... .......... .......... .......... .......... 60%  172M 0s
  1050K .......... .......... .......... .......... .......... 63%  268M 0s
  1100K .......... .......... .......... .......... .......... 66%  214M 0s
  1150K .......... .......... .......... .......... .......... 69%  218M 0s
  1200K .......... .......... .......... .......... .......... 72% 6.79M 0s
  1250K .......... .......... .......... .......... .......... 75%  163M 0s
  1300K .......... .......... .......... .......... .......... 78% 95.7M 0s
  1350K .......... .......... .......... .......... .......... 81%  205M 0s
  1400K .......... .......... .......... .......... .......... 84%  393M 0s
  1450K .......... .......... .......... .......... .......... 86%  288M 0s
  1500K .......... .......... .......... .......... .......... 89%  145M 0s
  1550K .......... .......... .......... .......... .......... 92%  569M 0s
  1600K .......... .......... .......... .......... .......... 95%  379M 0s
  1650K .......... .......... .......... .......... .......... 98% 6.92M 0s
  1700K .......... .......... ....                            100% 1.18G=0.6s

2020-03-02 04:16:09 (24.1 Mb/s) - ‘/dev/null’ saved [1765739/1765739]

